# testing_CVc-

ALTAIR_vision/: Dockerfile  compose.yaml
ALTAIR_vision/ball_detection/: CMakeLists.txt  ball.cpp
ALTAIR_vision/ball_detection/include/: ball.hpp
ALTAIR_vision/field_detection/: CMakeLists.txt  field.cpp
test1/: CMakeLists.txt  cv.cpp
test2/: CMakeLists.txt  CMakePresets.json  test2.cpp
test3/: test.cpp
